Fixed blue highlight clicking buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,11 @@
   flex-direction: column;
 }
 button,
-a {
+a,
+label,
+input,
+div,
+input {
   -webkit-tap-highlight-color: transparent;
 }
 
